Fixed some stuff in question page

--- a/Cloudents.Web/ClientApp/components/question/view/question.less
+++ b/Cloudents.Web/ClientApp/components/question/view/question.less
@@ -64,7 +64,21 @@
         }
     }
     
-   
+   .show-form-trigger{
+       background: white;
+       border: 8px solid #c7c7ee;
+       border-radius: 4px;
+       height: 56px;
+       display: flex;
+       align-items: center;
+       padding-left: 12px;
+
+       div{
+           font-size: 14px;
+           letter-spacing: -0.3px;
+           color: #3532d5;
+       }
+   }
 }
 
 
