--- a/Cloudents.Web/Views/Blockchain/Index.cshtml
+++ b/Cloudents.Web/Views/Blockchain/Index.cshtml
@@ -59,6 +59,7 @@
             <input class="button" type="submit" onclick="getBalance" value="Balance" id="getbalance" />
             <input class="button" type="submit" onclick="createAccount" value="createAccount" id="createaccount" />
             <input class="button" type="submit" onclick="txInitial10Tokens" value="10Tokens" id="txInitial10Tokens" />
+            <input class="button" type="submit" onclick="BuyTokens" value="BuyTokens" id="BuyTokens" />
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -125,9 +126,22 @@
         })
 
         function txInitial10Tokens() {
-            var test = localStorage.getItem("1");
-            test = { address: test };
-            var Account = $.post("blockchain/SetInitialBalance", test).then(function (result) {
+            var account = localStorage.getItem("1");
+            account = { address: test };
+            var Account = $.post("blockchain/SetInitialBalance", account).then(function (result) {
+                alert(result);
+            })
+        };
+
+        document.getElementById("BuyTokens").addEventListener("click", function (e) {
+            e.preventDefault();
+            txInitial10Tokens();
+        })
+
+        function txInitial10Tokens() {
+           
+            test = { address: "0b791c5dbc5704a075e3af8c654238e5eac78d2ac5dd3a7cd4c5a92a2e578f46", amount: 10 };
+            var Account = $.post("blockchain/BuyTokens", test).then(function (result) {
                 alert(result);
             })
         };
