--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -139,7 +139,7 @@
         height: 40px;
         min-height: 40px;
         max-width: 805px;
-        border-radius: 4px;
+        border-radius: 20px;
         background-color: #f0f0f0;
         box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
         border: solid 0.5px #bbbbbb;
@@ -149,10 +149,12 @@
 
         .sbf-mic {
             color: @color-blue !important;
+            padding: 0 14px;
         }
 
         .sbf-search {
             min-width: 34px;
+                color: #9b9b9b !important;
         }
 
         .input-group__input {
@@ -161,14 +163,20 @@
             input {
                 letter-spacing: -0.4px;
             }
+
         }
     }
   }
 
     .btn {
-        .sbf-3-dot {
+        .sbf-3-dot,.sbf-wallet,.sbf-menu,.sbf-comment {
             color: #3532D5;
+            font-size: 17px;
+            @media (max-width: @screen-xs) {
+                font-size: 18px;
+              }
         }
+
     }
 
     .share-btn {
@@ -180,8 +188,47 @@
     }
 }
 
-.settings-list .list__tile__title {
+.settings-list .list__tile__title, .menu-list-not-reg .list__tile__title {
     text-transform: capitalize;
+}
+
+.header-wallet,.header-comments{
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.header-wallet{
+    .btn{margin: 6px 3px!important;}
+    span{font-size: 14px; font-weight: bold;}
+}
+
+.red-counter{
+    width: auto;
+    min-width: 21px;
+    height: 21px;
+    padding: 0 2px;
+    background-color: #d0021b;
+    border: solid 2px @color-white;
+    color: @color-white;
+    font-size: 14px;
+    border-radius: 50%;
+    text-align: center;
+    position: absolute;
+    right: 3px;
+    top: 2px;
+}
+
+.menu-list-not-reg{
+    width: 280px;
+    padding: 14px 0 18px;
+    .list__tile{
+        height: 56px;
+        .list__tile__title{
+            font-size: 20px;
+            height: 27px;
+            letter-spacing: -0.5px;
+        }
+    }
 }
 
 .sharing-list {
