--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -89,6 +89,7 @@ button {
 
 @color-light-gray: #ddd;
 
+@color-marketplace: #d0021b;
 @color-ask: #0455a8;
 @color-note: #320161;
 @color-flashcard: #f14d4d;
@@ -100,7 +101,7 @@ button {
 @color-dark-blue:#302eb5;
 @color-green: #7ed321;
 @color-transparent: transparent;
-@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green,dark-blue,transparent;
+@list-colors: light-gray,marketplace,ask,note,flashcard,tutor,job,food,book,blue,green,dark-blue,transparent;
 
 
 .loop2(@index2) when (@index2 <= length(@list-colors)) {
