--- a/Cloudents.Web/Views/Blockchain/Index.cshtml
+++ b/Cloudents.Web/Views/Blockchain/Index.cshtml
@@ -13,7 +13,7 @@
             padding: 8px 16px;
             background: white;
             border-radius: 4px;
-            box-shadow: 0px 0 4px grey;
+            box-shadow: 0 0 4px grey;
         }
         h2 {
             margin: 16px 0 8px 0;
