Header new updates

--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -69,6 +69,7 @@
       line-height: 2.22;
       height: 20px;
       padding-left: 20px;
+      padding-top: 5px;
       margin-bottom: 15px;
 
       @media (max-width: @screen-xs) {
