--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -20,6 +20,9 @@
 
     .toolbar__title {
         .inTheMiddle();
+        @media(min-width: (@screen-sm + 1)) {
+            margin-left: 37px !important;
+        }
     }
 
 
@@ -176,6 +179,11 @@
                 font-size: 18px;
               }
         }
+        .sbf-menu {
+            @media (max-width: @screen-xs) {
+                font-size: 15px!important;
+              }
+        }
 
     }
 
@@ -188,11 +196,11 @@
     }
 }
 
-.settings-list .list__tile__title, .menu-list-not-reg .list__tile__title {
+.settings-list .list__tile__title, .menu-list .list__tile__title {
     text-transform: capitalize;
 }
 
-.header-wallet,.header-comments{
+.header-wallet,.header-comments,.header-rocket{
     display: flex;
     align-items: center;
     position: relative;
@@ -202,10 +210,41 @@
     span{font-size: 14px; font-weight: bold;}
 }
 
+.header-rocket{
+    width: 72px;
+    @media (max-width: @screen-xs) {
+        width: 66px;
+    }
+    button{
+        background-color: #3293f6;
+        color: @color-white !important;
+        width: 48px;
+        height: 48px;
+        @media (max-width: @screen-xs) {
+            width: 40px;
+            height: 40px;
+        }
+    }
+    .red-counter{
+        top: 7px;
+    }
+}
+
+.header-login{
+    height: 40px;
+    width: 104px;
+    margin-right: 24px;
+    border-radius: 26.5px;
+    border: solid 1px #3532d5;
+    font-size: 18px;
+    color: #3532d5;
+}
+
+
 .red-counter{
     width: auto;
-    min-width: 21px;
-    height: 21px;
+    min-width: 23px;
+    // height: 22px;
     padding: 0 2px;
     background-color: #d0021b;
     border: solid 2px @color-white;
@@ -214,11 +253,11 @@
     border-radius: 50%;
     text-align: center;
     position: absolute;
-    right: 3px;
-    top: 2px;
+    right: 0;
+    top: 1px;
 }
 
-.menu-list-not-reg{
+.menu-list{
     width: 280px;
     padding: 14px 0 18px;
     .list__tile{
@@ -227,6 +266,25 @@
             font-size: 20px;
             height: 27px;
             letter-spacing: -0.5px;
+        }
+        .list__tile__action{
+            min-width: 42px!important;
+            &.tile-logout{
+                min-width: 39px!important;
+                width: 30px;
+            }
+        }
+        .list__tile__avatar {
+            display: flex;
+            align-items: center;
+            .red-counter{
+                top:0;
+                position: relative;
+            }
+        }
+        .sbf.icon{
+            font-size: 16px; color: @color-grey;
+            &.sbf-logout{padding-left: 31px;}
         }
     }
 }
