Update Profile page

--- a/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
+++ b/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
@@ -50,7 +50,7 @@
         color: #5d5d5d;
         text-align: center;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
 
         .avatar{
             width: 64px;
