--- a/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
@@ -22,6 +22,12 @@
     color: @google-btn-bg;
     background: white;
     border-radius: 100%;
+    padding-top: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+    border: 3px solid white;
+    font-size: 17px;
+    margin-left: 8px;
   }
 
   .seperator-text {
