--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -22,7 +22,7 @@
         .inTheMiddle();
         margin: 0;
         @media(max-width: (@screen-sm)) {
-            margin-left: 37px;
+            margin-left: 40px;
             &.auth-user{
                 margin-left: 66px;
             }
@@ -65,8 +65,8 @@
     }
 
     .main {
-        .responsive-property(height,60px, 96px, null );
-        .responsive-property(padding-top,12px, 4px, null );
+        .responsive-property(height,60px, 85px, null );
+        .responsive-property(padding-top,12px, 0px, null );
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -108,6 +108,7 @@
         &.search-wrapper {
           align-items: flex-end;
           margin-right: 8px;
+          @media (max-width: 599px) {margin-right: 3px;}          
         }
 
         flex: 1;
@@ -223,14 +224,30 @@
     position: relative;
 }
 .header-wallet{
-    .btn{margin: 6px 3px;}
-    span{font-size: 14px; font-weight: bold;}
+    .btn{
+        margin: 6px 1px 6px 0px;
+    }
+    span{font-size: 14px; font-weight: bold;
+        @media (max-width: @screen-xs) {
+            margin: 0 3px;
+        }
+    }
+}
+
+.menu.gamburger,.header-rocket{
+    @media(max-width: (@screen-sm)) {
+        position: fixed;
+        left: 9px;
+        top: 3px;
+        .btn{margin: 0;}
+    }    
 }
 
 .header-rocket{
     width: 72px;
     @media (max-width: @screen-xs) {
-        width: 66px;
+        width: 56px;
+        top: 1px;
     }
     button.btn{
         background-color: #3293f6;
@@ -244,6 +261,9 @@
     }
     .red-counter{
         top: 7px;
+        @media (max-width: @screen-xs) {
+            top: 0px;
+        }
     }
 }
 
@@ -279,13 +299,7 @@
     top: 1px;
 }
 
-.menu.gamburger,.header-rocket{
-    @media(max-width: (@screen-sm)) {
-        position: fixed;
-        left: 0;
-        top: 2px;
-    }    
-}
+
 
 .sharing-list {
     padding: 0;
