--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -1,341 +1,351 @@
 ﻿@import "../../mixin.less";
 
 .header {
-    //background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
-    &.toolbar {
-        background-color: @color-white;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  //background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
+  &.toolbar {
+    background-color: @color-white;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .toolbar__items {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .toolbar__content > .layout {
+    height: 100%;
+  }
+
+  .toolbar__title {
+    .inTheMiddle();
+    margin: 0;
+    @media (max-width: (@screen-sm)) {
+      margin-left: 40px;
+      &.auth-user {
+        margin-left: 66px;
+      }
     }
 
-    .toolbar__items {
-        flex-grow: 1;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+  }
+
+  .logo-link {
+    //.inTheMiddle();
+    display: flex;
+    align-items: center;
+    padding-left: 16px;
+
+    @media (min-width: (@screen-sm + 1)) {
+      width: @logoWidth;
     }
 
-    .toolbar__content > .layout {
-        height: 100%;
+    @media (max-width: 959px) {
+      padding-left: 0;
+
+      svg {
+        width: 114px;
+      }
     }
 
-    .toolbar__title {
-        .inTheMiddle();
-        margin: 0;
-        @media(max-width: (@screen-sm)) {
-            margin-left: 40px;
-            &.auth-user{
-                margin-left: 66px;
-            }
-        }
-
+    svg {
+      fill: @color-main-purple;
     }
+  }
 
-
-    .logo-link {
-        //.inTheMiddle();
-        display: flex;
-        align-items: center;
-        padding-left: 16px;
-
-        @media(min-width: (@screen-sm + 1)) {
-            width: @logoWidth;
-        }
-
-        @media(max-width: 959px) {
-            padding-left: 0;
-
-            svg {
-                width: 114px;
-            }
-        }
-
-        svg {
-            fill: @color-main-purple;
-        }
+  .toolbar__content > *:not(.btn):not(.menu):last-child,
+  .toolbar__content > *:not(.btn):not(.menu):first-child {
+    &.dialog__container {
+      margin-right: 0;
     }
-
-    .toolbar__content > *:not(.btn):not(.menu):last-child,
-    .toolbar__content > *:not(.btn):not(.menu):first-child {
-        &.dialog__container{
-            margin-right: 0;
-        }
-        @media(max-width: 599px) {
-            margin: 0;
-        }
+    @media (max-width: 599px) {
+      margin: 0;
     }
+  }
 
-    .main {
-        .responsive-property(height,60px, 85px, null );
-        .responsive-property(padding-top,12px, 0px, null );
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+  .main {
+    .responsive-property(height, 60px, 85px, null);
+    .responsive-property(padding-top, 12px, 0px, null);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .smart-app-banner ~ .main {
+    @media (max-width: 599px) {
+      margin-top: 84px;
     }
+  }
 
-    .smart-app-banner ~ .main{
-        @media(max-width: 599px) {
-            margin-top: 84px;
-        }
-    }
+  .line {
+    .responsive-property(margin-right, 16px, null, 0);
+    .responsive-property(margin-left, 16px, 24px, 8px);
+    max-height: 60px;
 
-    .line {
-        .responsive-property(margin-right, 16px, null, 0);
-        .responsive-property(margin-left, 16px, 24px, 8px);
-        max-height: 60px;
+    @media (max-width: 959px) {
+      &:nth-child(2) {
+        //align-items: center; /*TODO: irena Check if needed...*/
+      }
 
-        @media(max-width: 959px) {
-            &:nth-child(2) {
-                //align-items: center; /*TODO: irena Check if needed...*/
-            }
+      form {
+        margin-right: 14px;
 
-            form {
-                margin-right: 14px;
-
-                @media (max-width: 599px) {
-                    margin-right: 8px;
-                }
-
-                .search-b {
-                    max-width: 100%;
-                }
-
-                .sbf-search {
-                    min-width: 35px;
-                }
-            }
-        }
-
-        &.search-wrapper {
-          align-items: flex-end;
+        @media (max-width: 599px) {
           margin-right: 8px;
-          @media (max-width: 599px) {margin-right: 3px;}          
         }
 
-        flex: 1;
-        //.inTheMiddle();
-        display: flex;
-        justify-content: center;
-        /*> * {
-            height:100%;
-        }*/
-    }
-
-    .settings-wrapper .btn--icon {
-        @media(max-width: 959px) {
-            margin-right: 0;
+        .search-b {
+          max-width: 100%;
         }
+
+        .sbf-search {
+          min-width: 35px;
+        }
+      }
     }
 
-    form {
-        flex-grow: 1;
-        width: 100%;
+    &.search-wrapper {
+      align-items: flex-end;
+      margin-right: 8px;
+      @media (max-width: 599px) {
+        margin-right: 3px;
+      }
     }
+
+    flex: 1;
+    //.inTheMiddle();
+    display: flex;
+    justify-content: center;
+    /*> * {
+        height:100%;
+    }*/
+  }
+
+  .settings-wrapper {
+    .btn--icon {
+      @media (max-width: 959px) {
+        margin-right: 0;
+      }
+    }
+    .header-login {
+      height: 40px;
+      width: 104px;
+      margin-right: 24px;
+      border-radius: 26.5px;
+      border: solid 1px @color-main-purple;
+      font-size: 18px;
+      color: @color-main-purple;
+      outline: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #3532d5;
+      @media (max-width: @screen-xs) {
+        display: none;
+      }
+
+    }
+  }
+
+  form {
+    flex-grow: 1;
+    width: 100%;
+  }
 
   .search-b-wrapper {
     flex-grow: 1;
 
-      .menu__activator{
-          display: flex;
-          width: 100%;
+    .menu__activator {
+      display: flex;
+      width: 100%;
 
-          span{
-              width: 100%;
-          }
+      span {
+        width: 100%;
       }
+    }
 
     max-width: 805px;
 
     .input-group:not(.input-group--error):not(.input-group--focused):not(.input-group--disabled) .input-group__input {
-        .input-group__append-icon:not(:hover){
-            color: @color-blue ;
-        }
-        .input-group__prepend-icon:not(:hover){
-            color: #9b9b9b;
-        }
+      .input-group__append-icon:not(:hover) {
+        color: @color-blue;
+      }
+      .input-group__prepend-icon:not(:hover) {
+        color: #9b9b9b;
+      }
 
     }
     .search-b {
-        height: 40px;
-        min-height: 40px;
-        max-width: 805px;
-        border-radius: 20px;
-        background-color: #f0f0f0;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-        border: solid 0.5px @color-medium-grey;
-        color: #000;
-        letter-spacing: -0.4px;
-        font-size: 16px;
+      height: 40px;
+      min-height: 40px;
+      max-width: 805px;
+      border-radius: 20px;
+      background-color: #f0f0f0;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+      border: solid 0.5px @color-medium-grey;
+      color: #000;
+      letter-spacing: -0.4px;
+      font-size: 16px;
 
-        .input-group__input{
-            .input-group__append-icon.sbf-mic {
-                padding: 0 14px;
-            }
+      .input-group__input {
+        .input-group__append-icon.sbf-mic {
+          padding: 0 14px;
+        }
+      }
+
+      .sbf-search {
+        min-width: 34px;
+      }
+
+      .input-group__input {
+        padding: 0 8px 0 12px;
+
+        input {
+          letter-spacing: -0.4px;
         }
 
-        .sbf-search {
-            min-width: 34px;
-        }
-
-        .input-group__input {
-            padding: 0 8px 0 12px;
-
-            input {
-                letter-spacing: -0.4px;
-            }
-
-        }
+      }
     }
   }
 
-    .btn {
-        .sbf-3-dot,.sbf-wallet,.sbf-menu,.sbf-comment {
-            color: @color-main-purple;
-            font-size: 17px;
-            @media (max-width: @screen-xs) {
-                font-size: 18px;
-              }
-        }
-        .sbf-menu {
-            @media (max-width: @screen-xs) {
-                font-size: 15px;
-              }
-        }
-
+  .btn {
+    .sbf-3-dot, .sbf-wallet, .sbf-menu, .sbf-comment {
+      color: @color-main-purple;
+      font-size: 17px;
+      @media (max-width: @screen-xs) {
+        font-size: 18px;
+      }
+    }
+    .sbf-menu {
+      @media (max-width: @screen-xs) {
+        font-size: 15px;
+      }
     }
 
-    .share-btn {
-        svg {
-            fill: @color-main-purple;
-            width: 20px;
-            height: 20px;
-        }
+  }
+
+  .share-btn {
+    svg {
+      fill: @color-main-purple;
+      width: 20px;
+      height: 20px;
     }
+  }
 }
 
-.navigation-drawer{z-index: 10;}
+.navigation-drawer {
+  z-index: 10;
+}
 
 .settings-list .list__tile__title, .menu-list .list__tile__title {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
-.header-wallet,.header-comments,.header-rocket{
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-.header-wallet{
-    .btn{
-        margin: 6px 1px 6px 0px;
-    }
-    span{font-size: 14px; font-weight: bold;
-        @media (max-width: @screen-xs) {
-            margin: 0 3px;
-        }
-    }
+.header-wallet, .header-comments, .header-rocket {
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
-.menu.gamburger,.header-rocket{
-    @media(max-width: (@screen-sm)) {
-        position: fixed;
-        left: 9px;
-        top: 3px;
-        .btn{margin: 0;}
-    }    
-}
-
-.header-rocket{
-    width: 72px;
-    @media (max-width: @screen-xs) {
-        width: 56px;
-        top: 1px;
-    }
-    button.btn{
-        background-color: #3293f6;
-        color: @color-white;
-        width: 48px;
-        height: 48px;
-        @media (max-width: @screen-xs) {
-            width: 40px;
-            height: 40px;
-        }
-    }
-    .red-counter{
-        top: 7px;
-        @media (max-width: @screen-xs) {
-            top: 0px;
-        }
-    }
-}
-
-.header-login{
-    height: 40px;
-    width: 104px;
-    margin-right: 24px;
-    border-radius: 26.5px;
-    border: solid 1px @color-main-purple;
-    font-size: 18px;
-    color: @color-main-purple;
-    outline: none;
-    @media (max-width: @screen-xs) {
-       display: none;
-    }
-
-}
-
-
-.red-counter{
-    width: auto;
-    min-width: 23px;
-    // height: 22px;
-    padding: 0 2px;
-    background-color: #d0021b;
-    border: solid 2px @color-white;
-    color: @color-white;
+.header-wallet {
+  .btn {
+    margin: 6px 1px 6px 0px;
+  }
+  span {
     font-size: 14px;
-    border-radius: 50%;
-    text-align: center;
-    position: absolute;
-    right: 0;
-    top: 1px;
+    font-weight: bold;
+    @media (max-width: @screen-xs) {
+      margin: 0 3px;
+    }
+  }
 }
 
+.menu.gamburger, .header-rocket {
+  @media (max-width: (@screen-sm)) {
+    position: fixed;
+    left: 9px;
+    top: 3px;
+    .btn {
+      margin: 0;
+    }
+  }
+}
 
+.header-rocket {
+  width: 72px;
+  @media (max-width: @screen-xs) {
+    width: 56px;
+    top: 1px;
+  }
+  button.btn {
+    background-color: #3293f6;
+    color: @color-white;
+    width: 48px;
+    height: 48px;
+    @media (max-width: @screen-xs) {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  .red-counter {
+    top: 7px;
+    @media (max-width: @screen-xs) {
+      top: 0px;
+    }
+  }
+}
+
+.red-counter {
+  width: auto;
+  min-width: 23px;
+  // height: 22px;
+  padding: 0 2px;
+  background-color: #d0021b;
+  border: solid 2px @color-white;
+  color: @color-white;
+  font-size: 14px;
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 1px;
+}
 
 .sharing-list {
-    padding: 0;
-    min-width: 152px;
-    padding: 6px 0;
+  padding: 0;
+  min-width: 152px;
+  padding: 6px 0;
 
-    .list__tile {
-        padding: 7px 8px;
-        height: auto;
-        color: @color-grey;
-        font-size: 14px;
-        line-height: normal;
-        letter-spacing: -0.2px;
+  .list__tile {
+    padding: 7px 8px;
+    height: auto;
+    color: @color-grey;
+    font-size: 14px;
+    line-height: normal;
+    letter-spacing: -0.2px;
+  }
+
+  .list__tile__action {
+    min-width: 0;
+    margin-right: 8px;
+
+    svg {
+      width: 24px;
+      height: 24px;
+
+      &.facebook-icon {
+        fill: #3b5795;
+      }
+
+      &.twitter-icon {
+        fill: #1ca1f2;
+      }
     }
+  }
 
-    .list__tile__action {
-        min-width: 0;
-        margin-right: 8px;
-
-        svg {
-            width: 24px;
-            height: 24px;
-
-            &.facebook-icon {
-                fill: #3b5795;
-            }
-
-            &.twitter-icon {
-                fill: #1ca1f2;
-            }
-        }
-    }
-
-    #input-url {
-        position: absolute;
-        top: -1000px;
-        opacity: 0;
-    }
+  #input-url {
+    position: absolute;
+    top: -1000px;
+    opacity: 0;
+  }
 }
