--- a/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
@@ -105,6 +105,23 @@
         z-index: 2;
         .background{display: block;}
       }
+
+
+      &::-webkit-scrollbar-track
+      {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: @color-white;        
+      }
+      &::-webkit-scrollbar
+      {
+        height: 6px;
+        background-color: @color-white;        
+      }
+      &::-webkit-scrollbar-thumb
+      {
+        background-color: #979797;
+        border: none;
+      }
       
     }
     .close-btn{
