New updates for header

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -62,6 +62,7 @@
             flex-basis: auto;
             @media(max-width: @screen-xs){
                 margin-right: 8px !important;
+                margin-bottom: 3px;
             }
         }
     }
