--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -21,6 +21,10 @@
         }
     }
 
+    .my-question{
+        max-width: @screen-xs;
+    }
+
     .md5{margin-left: 17px;}
 
     .xs4{margin: 0 17px;}
