Fix #158,154 and some other fixes

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -7,6 +7,8 @@
     min-height: 100px;
     width: 100%;
 
+    &.card-route{cursor: pointer;}
+    
     p{margin: 17px 19px 17px 17px;}
 
     .q-price{
