--- a/Cloudents.Web/ClientApp/components/profile/profile.less
+++ b/Cloudents.Web/ClientApp/components/profile/profile.less
@@ -18,7 +18,9 @@
         margin-bottom: 17px;
     }
 
-    .web-content{margin-left: 16px;    flex: 0.7 1 auto;}
+    .web-content{margin-left: 16px;    flex: 0.7 1 auto;
+        .question-card{margin-bottom: 16px;}
+    }
 
     .main-block{
         // height: 290px;
@@ -32,11 +34,12 @@
         font-size: 14px;
         color: #5d5d5d;
         text-align: center;
-        
+        margin-left: 100px;
         width: 209px;
 
         @media (max-width: @screen-xs) {
             width: 100%;
+            margin-left: 0;
         }
 
         .menu{
