--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -17,7 +17,9 @@
         line-height: 1.04;
         letter-spacing: -0.6px;
         width: 100%;
-        height: 64px;        
+        line-height: 64px;
+        display: block;
+        text-align: center;      
     }
 
     .card-block{
