start disable form button case #163

--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -77,6 +77,9 @@
       &:focus {
         outline: none;
       }
+      &:disabled{
+        background: #8888d5;
+      }
     }
 
     .limited-width {
