--- a/Cloudents.Web/ClientApp/components/settings/view/settings.less
+++ b/Cloudents.Web/ClientApp/components/settings/view/settings.less
@@ -11,7 +11,7 @@
 
   .container {
     max-width: 610px;
-    margin-top: 30px;
+    //margin-top: 30px;
     padding-bottom: 0;
     height: 440px;
 
