--- a/Cloudents.Web/wwwroot/Content/talkjs-theme.css
+++ b/Cloudents.Web/wwwroot/Content/talkjs-theme.css
@@ -1,3 +1,136 @@
-.Panel{
-    background: red;
+/** TalkJS Default Theme **/
+/*
+This is a TalkJS theme file. Themes are designed to allow you to easily change
+the main look and feel of TalkJS. Themes cannot be used to change the layout,
+e.g. you cannot change which panels appear where.
+
+If you understand CSS, you will feel right at home with TalkJS theme files.
+A theme looks like a CSS file, except that the available classes and
+properties are limited to what you see here. If you remove a property, the theme
+will fail to work and TalkJS will revert to the default theme. If you add a
+property, it will be ignored.
+
+The easiest way to make a theme is to start with a default theme (this file)
+and edit it until you're happy with the results.
+
+PLEASE NOTE: We continuously add options and features to TalkJS themes (in a
+backward compatible way). If you need to theme something that you can't access,
+let us know! We may be able to add it quickly.
+*/
+
+/* If you use webfonts, use one or more @font directives as shown below.
+   You usually won't want to change the @version number unless you're upgrading
+   an existing theme.
+*/
+
+/* @version 3 */
+/* @font url("https://cloud.typography.com/7091114/7183352/css/fonts.css"); */
+
+/* Theses properties apply to all TalkJS UI elements. */
+.global {
+    font-family: "Whitney SSm A", "Whitney SSm B", "Helvetica", sans-serif;
+    font-size: 13.3px;
+    line-height: 1.37em;
+    color: #111;
+}
+
+/* The following three classes allow you to tune the TalkJS layout.
+   Unlike all other properties in a theme, `width` and `max-width` are both
+   optional.
+   Note: there is no way to give the entire Inbox a maximum width: use CSS
+   in your own app to restrict the with of the container div, if necessary. */
+.chatbox {
+    width: 100%;
+    max-width: 420px;
+}
+
+.inbox-feed-panel {
+    width: 40%;
+    max-width: 300px;
+}
+
+.inbox-chat-panel {
+    /* By using `calc` below we can ensure that the total width of the feed, the chat,
+       and the space in between is precisely 100%. We recommend the same if you also
+       use percentage widths and a margin. */
+    width: calc(60% - 20px);
+    max-width: 420px;
+    margin-left: 20px;
+}
+
+/* A panel is a rectangular box, such as the message list or
+   the conversation history box */
+.panel {
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #dce0e0;
+    background-color: purple;
+    padding: 10px;
+}
+
+/* Applies to messages written by the current user. */
+.message-balloon-me {
+    width: 75%;
+    background-color: #00bcd4;
+    color: #fff; /* optional, defaults to .global#color */
+    border-color: #02b3c9;
+    border-radius: 20px;
+    border-width: 1px;
+}
+
+/* Applies to messages *not* written by the current user. */
+.message-balloon-other {
+    width: 75%;
+    background-color: #fff;
+    color: #111; /* optional, defaults to .global#color */
+    border-color: #eee;
+    border-radius: 20px;
+    border-width: 1px;
+}
+
+/* These are the horizontal markers that separate messages sent on different days */
+.day-marker {
+    color: #FE4365;
+}
+
+/* The avatar is the user's picture in the profile panel and in the conversation
+   history. */
+.avatar {
+    border-radius: 50%;
+    border-width: 2px;
+    border-color: #fff;
+}
+
+/* This applies to the text input box underneath the message list. */
+.text-input {
+    border-radius: 4px;
+    border-width: 1px;
+    border-color: #E0E0E0;
+    background-color: #fff;
+    color: #232529;
+}
+
+/* Styles all links, globally. */
+.link {
+    color: rgb(0, 0, 238);
+}
+
+/* The highlight colors control of the currently selected
+   conversation in the conversation feed, as well as a few accents here and
+   there. */
+.highlight {
+    background-color: #0288d1;
+    color: #fff;
+}
+
+/* This colors the "Desktop Notifications" toggle in the Inbox view. */
+.toggle-button {
+    border-color: #6fc754;
+}
+.Panel {
+    background-color: red;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #dce0e0;
+    padding: 10px;
 }
