Some registration changes (Added field component + error messages)

--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -60,10 +60,6 @@
 
     }
 
-    .input-wrapper {
-      position: relative;
-    }
-
     .continue-btn {
       background: #3532d5;
       font-size: 18px;
@@ -77,7 +73,7 @@
       &:focus {
         outline: none;
       }
-      &:disabled{
+      &:disabled {
         background: #8888d5;
       }
     }
@@ -86,7 +82,7 @@
       max-width: 400px;
       width: 100%;
     }
-    .input-field ,select {
+    select {
       height: @registrationFieldHeight;
       width: 100%;
       //margin-top: 36px;
@@ -141,7 +137,6 @@
       }
     }
   }
-
 
   .signin-strip {
     color: #888b8e;
