--- a/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
@@ -52,8 +52,8 @@
       padding: 0 12px;
     }
   }
-  .input-wrapper {
-    .email-field {
+  .input-wrapper.email-field{
+     input{
       padding-left: 54px;
       margin-top: 0;
     }
