minor fix mob private chat

--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -83,6 +83,13 @@
            color: #3532d5;
        }
    }
+
+   .chat-iframe iframe{
+        @media(max-width: @screen-xs){
+            min-height: ~"calc(100vh - 68px)";
+            max-height: ~"calc(100vh - 68px)";
+        }
+   }
 }
 
 
