--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -77,20 +77,7 @@
         text-align: left;
         color: #4a4a4a;
     }
-
-    .answer{
-        padding: 17px;
-        display: flex;
-        justify-content: flex-end;
-
-        .answer-btn{            
-            border-radius: 4px;
-            background-color: #0455a8;
-            font-size: 14px;
-            color: @color-white;
-            padding: 3px 20px;              
-        }
-    }
+  
     
     .q-user-info{  
         bottom: 0;      
@@ -102,5 +89,67 @@
         font-size: 12px;
         padding: 10px 10px 13px 17px;
         justify-content: space-between;
+    }
+
+    .answers-list{
+        display: flex;    
+        justify-content: space-between;        
+        padding: 7px 17px 9px;
+        align-items: flex-end;
+
+        .new-block{display: flex; align-items: flex-start;}
+        .files{
+            width: 55px;
+            margin-right: 16px;
+            border-right: 1px solid @Dividers;
+            height: 25px;
+            display: flex;
+            flex-direction: row;
+            
+            .sbf-attach{ transform: rotate(260deg);
+                &::before{transform: scale(1, -1);font-size: 16px;color: @color-grey;}
+            }
+            span{
+                color: @color-grey;
+                margin-left: 10px;
+                font-size: 20px;                
+            }
+            
+        }
+        .users{
+            list-style-type: none;
+            li{
+                float: left;
+                margin-right: 5px;
+                width: 35px;
+                height: 38px;
+                position: relative;
+                .avatar{
+                    width: 32px;
+                    height: 32px;
+                }
+                .sbf-chat{
+                    text-align: center;
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
+                    font-size: 20px;
+                    color:@color-main-purple;
+                }
+
+            }
+        }
+
+        .answer{ 
+            display: flex;                
+            .answer-btn{            
+                border-radius: 4px;
+                background-color: #0455a8;
+                font-size: 14px;
+                color: @color-white;
+                padding: 3px 20px;              
+            }
+        }
+
     }
 }      
