Fixed issues in ask question (when to show the "answer" button, when tho show rightside block, close button in askquestion page) + talkJs issue

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -7,8 +7,6 @@
     min-height: 100px;
     width: 100%;
 
-    &.card-route{cursor: pointer;}
-    
     p{margin: 17px 19px 17px 17px;}
 
     .q-price{
@@ -91,7 +89,7 @@
         justify-content: space-between;
     }
 
-    .answers-list{
+    .bottom-section .card-info{
         display: flex;    
         justify-content: space-between;        
         padding: 7px 17px 9px;
