--- a/Cloudents.Web/wwwroot/Content/talkjs-theme.css
+++ b/Cloudents.Web/wwwroot/Content/talkjs-theme.css
@@ -64,7 +64,7 @@ let us know! We may be able to add it quickly.
     border-radius: 5px;
     border-width: 1px;
     border-color: #dce0e0;
-    background-color: gr;
+    background-color: #fff;
     padding: 10px;
 }
 
