--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -44,6 +44,12 @@
             line-height: 1.79;
             color: @color-main-purple;
             display: flex;
+
+            .upvote-btn{
+                &:focus{
+                    outline: none;
+                }
+            }
     
             i.sbf{
                 width: 25px;
