Fixed signin disable issue, removed marketplace tab, and #173

--- a/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
@@ -117,8 +117,13 @@
       margin: -4px 0px 20px 2px;
     }
   }
-
-
+.submit-btn-wrap {
+  position: relative;
+  .error-message {
+    position: absolute;
+    top: -24px;
+  }
+}
 
   .btn.ask_btn {
     position: relative;
