Balance error message

--- a/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
@@ -121,7 +121,11 @@
   position: relative;
   .error-message {
     position: absolute;
-    top: -24px;
+    top: -32px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: red;
   }
 }
 
