--- a/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
@@ -27,7 +27,7 @@
     }
   }
   .continue-btn {
-    margin-top: 40px;
+    margin-top: 24px;
     &.submit-code {
       margin-top: 12px;
     }
@@ -37,5 +37,20 @@
   }
   .confirm-title {
     letter-spacing: -0.3px;
+    margin-top: 48px;
+  }
+
+  .limited-width.wide{
+    height: 315px;
+    p{max-width: none;}
+    .code-field,.continue-btn{max-width: 400px;  margin: 20px auto 0;}
+    .margin-top{
+      margin-top: 160px;
+      @media (max-width: @screen-xs) {
+        margin-top: 85px;
+        margin-bottom: 20px;
+      }
+      
+    }
   }
 }
