Fix header icons in mobile mode with smart banner

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -281,6 +281,9 @@
     position: fixed;
     left: 9px;
     top: 3px;
+    &.smart-app-banner{
+      top: 87px;
+    }
     height: auto;
     .btn {
       margin: 0;
