--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -111,10 +111,15 @@
         }
         @media(max-width: @screen-xs) {
             min-height: 42px;
-            position: absolute;
+            position: fixed;
             top: 0;
             right: 0;
             z-index: 2;
+            &.smart-app-banner{
+                top: 89px;
+                min-height: 30px;
+                height: 30px;
+            }
         }
 
         button {
