--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Cloudents.Web.Extensions
+﻿@using Cloudents.Web.Services
 @using Cloudents.Web.Views
 @using Microsoft.AspNetCore.Hosting
 @inject WebPackChunkName Provider
